Enhance de, es and fr translations

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -17,7 +17,7 @@ de:
     review_settings: Einstellungen überprüfen
     manage_review_settings: Steuern der Anzeige von Kommentaren
     preview_size: Größe der Überprüfung Schnipsel
-    include_unapproved: Include unapproved reviews in listings
+    include_unapproved: Enthalten ungenehmigte Beiträge in Inserate
   avarage_rating: Durchschnittliche Kundenbewertung
   review_by: Mit
   review_from: Von
